# ragsystem

./: README.md  docker-compose.yml  fix_qdarant.py  init_db.py  main.py  pyproject.toml  run.py  setup_db.py  test.py
app/: main.py
app/api/: __init__.py  chat.py  ingest.py
app/core/: config.py
app/db/: metadata_db.py  redis_client.py  vector_db.py
app/models/: database.py  schemas.py
app/services/: booking.py  chunking.py  document_processor.py  embedding.py  memory.py  rag.py
